# Cctech

application/src/: main.cpp
data/: bezier_data.txt
geometry/include/: bezier.h  cuboid.h  cylinder.h  objToStl.h  obj_shape.h  polygon.h  polyline.h  sphere.h  stl_shape.h  transform_utils.h  triangle.h
geometry/src/: bezier.cpp  cuboid.cpp  cylinder.cpp  objToStl.cpp  obj_shape.cpp  polygon.cpp  polyline.cpp  scene.cpp  shape_handlers.cpp  sphere.cpp  stl_shape.cpp  triangle.cpp
projectGui/: BezierWidget.cpp  BezierWidget.h  BooleanOperationWidget.cpp  BooleanOperationWidget.h  CMakeLists.txt  DimensionDialogBox.cpp  DimensionDialogBox.h  PolygonWidget.cpp  PolygonWidget.h  glwidget.cpp  glwidget.h  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  shape3d.h  shapefactory.cpp  shapefactory.h  shapeinputdialog.cpp  shapeinputdialog.h  structure.h
